lab8/circuitbreaker/dateapi-virtual-service.yaml
#
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: dateapi
        port:
          number: 8080
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 15s 
    timeout: "1s"
