lab8/circuitbreaker/destination-rule.yaml
  
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dateapi-destinationrule
spec:
  host: dateapi
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 10s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
